# Waverover-SIJ

./: .gitignore  README.md  plot_tf_trajectory.py
.github/workflows/: ros2-jazzy-ci.yaml
deployment/: README.md  install.sh  update_and_build.sh  waverover-update.service
deployment/test/: test_service_restart_policy.py  test_update_and_build.py
deployment/waverover.service.d/: 10-auto-update.conf
ldlidar_stl_ros2/include/: ros2_api.h
ldlidar_stl_ros2/launch/: stl19p.launch.py
ldlidar_stl_ros2/src/: demo.cpp
rf2o_laser_odometry/: package.xml
rf2o_laser_odometry/launch/: rf2o_laser_odometry.launch.py
rf2o_laser_odometry/src/: CLaserOdometry2D.cpp  CLaserOdometry2DNode.cpp
ros2waverover/: CMakeLists.txt  Dockerfile  README.md  entrypoint.sh  package.xml
ros2waverover/launch/: wave_rover_launch.py
ros2waverover/scripts/: manual_lr_ui
ros2waverover/src/include/: ROS2Subscriber.hpp  RobotController.hpp  RoverCommands.hpp  UARTSerialPort.hpp
ros2waverover/src/source/: ROS2Subscriber.cpp  RobotController.cpp  UARTSerialPort.cpp  main.cpp
waverover/: README.md  package.xml  setup.cfg  setup.py
waverover/config/: robot_defaults.yaml  robot_identity.example.yaml
waverover/launch/: robot.launch.py  slam.launch.py
waverover/test/: test_health_monitor.py  test_robot_launch.py  test_serial_reliability_source.py  test_slam_launch.py  test_stack_config.py
waverover/waverover/: health_monitor.py  namespaced_manual_lr.py  namespaced_teleop.py  stack_config.py
waverover_controller/: README.md  package.xml  setup.cfg  setup.py
waverover_controller/config/: waypoints.yaml
waverover_controller/launch/: waypoint_controller.launch.py
waverover_controller/test/: test_mcs_pose_provider.py  test_waypoint_config.py  test_waypoint_progress.py  test_waypoint_trial_state.py
waverover_controller/waverover_controller/: waypoint_controller.py
waverover_swarm_controller/: PC_SWARM_TEST_COMMANDS.txt  README.md  package.xml  setup.cfg  setup.py
waverover_swarm_controller/config/: dynamic_convex.yaml  dynamic_convex_real.yaml  dynamic_heuristic.yaml  dynamic_heuristic_decentralized.yaml  dynamic_heuristic_decentralized_real.yaml  dynamic_heuristic_real.yaml  dynamic_mpc_centralized.yaml  dynamic_mpc_centralized_real.yaml  dynamic_mpc_distributed.yaml  dynamic_mpc_distributed_real.yaml  dynamic_smoke_test_6.yaml  experiment.example.yaml  experiment.yaml  smoke_test_134.yaml  smoke_test_6.yaml  targets.yaml  targets_setup_1.yaml  targets_smoke_6.yaml
waverover_swarm_controller/launch/: swarm_controller.launch.py  synthetic_mcs.launch.py
waverover_swarm_controller/test/: conftest.py  test_config.py  test_safety.py  (+17 more)
waverover_waypoint_ui/: README.md  package.xml  setup.cfg  setup.py
(+37 files in other folders)
